daas-project/project-base/templates/np-allow-ingress-group-infra.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-group-infra
spec:
  podSelector:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            ource.group.netpolicy.hypermachines.net/infra: "infra"
