daas-project/project-base/templates/np-allow-linkerd-ingress.yml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-group-infra
spec:
  selector: all()
  ingress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: slinkerd.io/control-plane-ns == 'linkerd'
