daas-project/project-base/templates/np-deny-all-egress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-egress
spec:
  podSelector: {}
  egress:
  - to:
    - podSelector: {}
