daas-project/project-base/templates/np-deny-all-ingress-egress.yml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-egress
spec:
  selector: all()
  types:
  - Ingress
  - Egress
