daas-project/project-base/templates/np-deny-all-ingress.yml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-egress
spec:
  selector: all()
  types:
  - Ingress
  - Egress
